перейменовує класи на головній сторінці

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,35 +22,35 @@
   </head>
   <body>
     <header>
-      <div class="conteiner header-coteiner">
+      <div class="conteiner header__coteiner">
         <a lang="en" class="logo link" href="./index.html">
-          <span class="logo-accent">Web</span>Studio
+          <span class="logo__accent">Web</span>Studio
         </a>
-        <nav class="header-navigation">
-          <ul class="header-navigation-list list">
-            <li class="header-item">
-              <a class="header-link link" href="./index.html">Студія</a>
+        <nav class="navigation">
+          <ul class="navigation__list list">
+            <li class="navigation__item">
+              <a class="navigation__link link" href="./index.html">Студія</a>
             </li>
-            <li class="header-item">
-              <a class="header-link link current" href="#">Портфоліо</a>
+            <li class="navigation__item">
+              <a class="navigation__link link navigation__link--current" href="#">Портфоліо</a>
             </li>
-            <li class="header-item">
-              <a class="header-link link" href="#">Контакти</a>
+            <li class="navigation__item">
+              <a class="navigation__link link" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="list header-contact-list">
+        <ul class="list contact">
           <li>
-            <a class="header-contact link" href="mailto:info@devstudio.com">
-              <svg class="header-icon" width="16" height="12">
+            <a class="contact__item link" href="mailto:info@devstudio.com">
+              <svg class="contact__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="header-contact link" href="tel:+380961111111"
-              ><svg class="header-icon" width="10" height="16">
+            <a class="contact__item link" href="tel:+380961111111"
+              ><svg class="contact__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -254,97 +254,97 @@
       </section>
     </main>
     <footer>
-      <div class="footer-conteiner conteiner">
-        <div class="footer-logo-contact">
-          <div class="logo-footer">
+      <div class="footer__conteiner conteiner">
+        <div class="footer__group">
+          <div class="footer__logo">
             <a lang="en" href="./index.html" class="logo link">
-              <span class="logo-accent">Web</span><span class="white-logo">Studio</span>
+              <span class="logo__accent">Web</span><span class="logo--white">Studio</span>
             </a>
           </div>
           <address>
             <ul class="list">
-              <li class="contact-item">
+              <li class="foooter-contact__item">
                 <a
-                  class="link contact-link footer-text-color"
+                  class="link foooter-contact__link foooter-contact--color"
                   href="https://goo.gl/maps/pjZerNN3NXK7QU4d8"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="contact-item">
-                <a class="link contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <li class="foooter-contact__item">
+                <a class="link foooter-contact__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
-              <li class="contact-item">
-                <a class="link contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+              <li class="foooter-contact__item">
+                <a class="link foooter-contact__link" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
         <div>
-          <h3 class="owner-links-title">Приєднуйтесь</h3>
-          <ul class="owner-links-list list">
+          <h3 class="owner-links__title">Приєднуйтесь</h3>
+          <ul class="owner-links__list list">
             <li>
               <a
-                class="owner-socials link"
+                class="socials__link owner__socials link"
                 href="https://www.instagram.com"
                 aria-label="посилання на instagram"
                 target="_blank"
                 rel="noopener noreferrer"
-                ><svg class="owner-socials-icon" width="20" height="20">
+                ><svg class="owner-socials__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li>
               <a
-                class="owner-socials link"
+                class="socials__link owner__socials link"
                 href="https://twitter.com/"
                 aria-label="посилання на twitter"
                 target="_blank"
                 rel="noopener noreferrer"
-                ><svg class="owner-socials-icon" width="20" height="20">
+                ><svg class="owner-socials__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li>
               <a
-                class="owner-socials link"
+                class="socials__link owner__socials link"
                 href="https://www.facebook.com/"
                 aria-label="посилання на facebook"
                 target="_blank"
                 rel="noopener noreferrer"
-                ><svg class="owner-socials-icon" width="20" height="20">
+                ><svg class="owner-socials__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li>
               <a
-                class="owner-socials link"
+                class="socials__link owner__socials link"
                 href="https://www.linkedin.com/"
                 aria-label="посилання на linkedin"
                 target="_blank"
                 rel="noopener noreferrer"
-                ><svg class="owner-socials-icon" width="20" height="20">
+                ><svg class="owner-socials__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
           </ul>
         </div>
         <div class="subscription">
-          <p class="subscription-title">Підпишіться на розсилку</p>
+          <p class="subscription__title">Підпишіться на розсилку</p>
           <form>
-            <div class="subscription-form">
-              <label class="subscription-field">
+            <div class="subscription__form">
+              <label class="subscription__field">
                 <input
-                  class="subscription-email"
+                  class="subscription__email"
                   name="user-email"
                   type="email"
                   placeholder="E-mail"
                 />
               </label>
-              <button class="form-btn subscription-btn" type="submit">
+              <button class="btn subscription__btn" type="submit">
                 Підписатися
-                <svg class="subscription-icon" width="24" height="24">
+                <svg class="subscription__icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-send"></use>
                 </svg>
               </button>
