перейменовує класи у портфоліо

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                 <a href="#" class="form-agreement-link">Умови договору</a></label
               >
             </div>
-            <button class="form-btn feedback-btn" type="submit">Відправити</button>
+            <button class="btn feedback-btn" type="submit">Відправити</button>
           </div>
         </form>
       </div>
