--- a/portfolio.html
+++ b/portfolio.html
@@ -63,189 +63,189 @@
       <section>
         <div class="conteiner">
           <h1 hidden>Портфоліо</h1>
-          <ul class="portfolio-btn-list list">
-            <li class="portfolio-btn-item">
-              <button type="button" class="portfolio-btn button-cursor">Усі</button>
+          <ul class="portfolio-nav list">
+            <li class="portfolio-nav__item">
+              <button type="button" class="portfolio-nav__btn button-cursor">Усі</button>
             </li>
-            <li class="portfolio-btn-item">
-              <button type="button" class="portfolio-btn button-cursor">Веб-сайти</button>
+            <li class="portfolio-nav__item">
+              <button type="button" class="portfolio-nav__btn button-cursor">Веб-сайти</button>
             </li>
-            <li class="portfolio-btn-item">
-              <button type="button" class="portfolio-btn button-cursor">Додатки</button>
+            <li class="portfolio-nav__item">
+              <button type="button" class="portfolio-nav__btn button-cursor">Додатки</button>
             </li>
-            <li class="portfolio-btn-item">
-              <button type="button" class="portfolio-btn button-cursor">Дизайн</button>
+            <li class="portfolio-nav__item">
+              <button type="button" class="portfolio-nav__btn button-cursor">Дизайн</button>
             </li>
-            <li class="portfolio-btn-item">
-              <button type="button" class="portfolio-btn button-cursor">Маркетинг</button>
+            <li class="portfolio-nav__item">
+              <button type="button" class="portfolio-nav__btn button-cursor">Маркетинг</button>
             </li>
           </ul>
-          <ul class="work-examples-list list">
-            <li class="work-examples-item">
-              <a class="link work-examples-link" href="#">
-                <div class="work-examples-thumb">
+          <ul class="card-set list">
+            <li class="card">
+              <a class="link card__link" href="#">
+                <div class="card__thumb">
                   <img src="./images/laptop.jpg" alt="ноутбук" width="370" />
-                  <div class="work-example-overlay">
-                    <p class="work-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="work-examples-content">
-                  <h2 class="work-examples">Технокряк</h2>
-                  <p class="work-examples-filter">Веб-сайт</p>
+                <div class="card__content">
+                  <h2 class="card__name">Технокряк</h2>
+                  <p class="card__filter">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="work-examples-item">
-              <a class="link work-examples-link" href="#">
-                <div class="work-examples-thumb">
+            <li class="card">
+              <a class="link card__link" href="#">
+                <div class="card__thumb">
                   <img src="./images/playing-basketball.jpg" alt="постер" width="370" />
-                  <div class="work-example-overlay">
-                    <p class="work-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="work-examples-content">
-                  <h2 class="work-examples">
+                <div class="card__content">
+                  <h2 class="card__name">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
                   </h2>
-                  <p class="work-examples-filter">Дизайн</p>
+                  <p class="card__filter">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="work-examples-item">
-              <a class="link work-examples-link" href="#">
-                <div class="work-examples-thumb">
+            <li class="card">
+              <a class="link card__link" href="#">
+                <div class="card__thumb">
                   <img
                     src="./images/main-page-restaurant.jpg"
                     alt="логотип ресторану"
                     width="370"
                   />
-                  <div class="work-example-overlay">
-                    <p class="work-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="work-examples-content">
-                  <h2 class="work-examples">Ресторан <span lang="en">Seafood</span></h2>
-                  <p class="work-examples-filter">Додаток</p>
+                <div class="card__content">
+                  <h2 class="card__name">Ресторан <span lang="en">Seafood</span></h2>
+                  <p class="card__filter">Додаток</p>
                 </div>
               </a>
             </li>
-            <li class="work-examples-item">
-              <a class="link work-examples-link" href="#">
-                <div class="work-examples-thumb">
+            <li class="card">
+              <a class="link card__link" href="#">
+                <div class="card__thumb">
                   <img src="./images/headphone.jpg" alt="навушники" width="370" />
-                  <div class="work-example-overlay">
-                    <p class="work-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="work-examples-content">
-                  <h2 class="work-examples">Проєкт <span lang="en">Prime</span></h2>
-                  <p class="work-examples-filter">Маркетинг</p>
+                <div class="card__content">
+                  <h2 class="card__name">Проєкт <span lang="en">Prime</span></h2>
+                  <p class="card__filter">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="work-examples-item">
-              <a class="link work-examples-link" href="#">
-                <div class="work-examples-thumb">
+            <li class="card">
+              <a class="link card__link" href="#">
+                <div class="card__thumb">
                   <img src="./images/boxes.jpg" alt="коробки" width="370" />
-                  <div class="work-example-overlay">
-                    <p class="work-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="work-examples-content">
-                  <h2 class="work-examples">Проєкт <span lang="en">Boxes</span></h2>
-                  <p class="work-examples-filter">Додаток</p>
+                <div class="card__content">
+                  <h2 class="card__name">Проєкт <span lang="en">Boxes</span></h2>
+                  <p class="card__filter">Додаток</p>
                 </div>
               </a>
             </li>
-            <li class="work-examples-item">
-              <a class="link work-examples-link" href="#">
-                <div class="work-examples-thumb">
+            <li class="card">
+              <a class="link card__link" href="#">
+                <div class="card__thumb">
                   <img src="./images/monitor.jpg" alt="монітор" width="370" />
-                  <div class="work-example-overlay">
-                    <p class="work-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="work-examples-content">
-                  <h2 class="work-examples" lang="en">Inspiration has no Borders</h2>
-                  <p class="work-examples-filter">Веб-сайт</p>
+                <div class="card__content">
+                  <h2 class="card__name" lang="en">Inspiration has no Borders</h2>
+                  <p class="card__filter">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="work-examples-item">
-              <a class="link work-examples-link" href="#">
-                <div class="work-examples-thumb">
+            <li class="card">
+              <a class="link card__link" href="#">
+                <div class="card__thumb">
                   <img src="./images/book.jpg" alt="книга" width="370" />
-                  <div class="work-example-overlay">
-                    <p class="work-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="work-examples-content">
-                  <h2 class="work-examples">Видання <span lang="en">Limited Edition</span></h2>
-                  <p class="work-examples-filter">Дизайн</p>
+                <div class="card__content">
+                  <h2 class="card__name">Видання <span lang="en">Limited Edition</span></h2>
+                  <p class="card__filter">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="work-examples-item">
-              <a class="link work-examples-link" href="#">
-                <div class="work-examples-thumb">
+            <li class="card">
+              <a class="link card__link" href="#">
+                <div class="card__thumb">
                   <img src="./images/label.jpg" alt="бірка" width="370" />
-                  <div class="work-example-overlay">
-                    <p class="work-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="work-examples-content">
-                  <h2 class="work-examples">Проєкт <span lang="en">LAB</span></h2>
-                  <p class="work-examples-filter">Маркетинг</p>
+                <div class="card__content">
+                  <h2 class="card__name">Проєкт <span lang="en">LAB</span></h2>
+                  <p class="card__filter">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="work-examples-item">
-              <a class="link work-examples-link" href="#">
-                <div class="work-examples-thumb">
+            <li class="card">
+              <a class="link card__link" href="#">
+                <div class="card__thumb">
                   <img src="./images/typing-on-laptop.jpg" alt="друкувати" width="370" />
-                  <div class="work-example-overlay">
-                    <p class="work-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="work-examples-content">
-                  <h2 class="work-examples" lang="en">Growing Business</h2>
-                  <p class="work-examples-filter">Додаток</p>
+                <div class="card__content">
+                  <h2 class="card__name" lang="en">Growing Business</h2>
+                  <p class="card__filter">Додаток</p>
                 </div>
               </a>
             </li>
