--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header>
@@ -532,57 +532,57 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-btn" data-modal-close>
-          <svg class="modal-icon-close" width="30" height="30">
+        <button class="modal__btn" data-modal-close>
+          <svg class="modal__btn-close" width="30" height="30">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+        <p class="modal__title">Залиште свої дані, ми вам передзвонимо</p>
         <form name="feedback_form">
           <div class="feedback-form-group">
-            <label for="modal-user-name" class="modal-label">Ім'я</label>
-            <div class="modal-wrapper">
-              <input class="modal-fild" id="modal-user-name" type="text" name="user-name" />
-              <svg class="modal-icon" width="18" height="18">
+            <label for="modal-user-name" class="form__label">Ім'я</label>
+            <div class="form__wrapper">
+              <input class="form__fild" id="modal-user-name" type="text" name="user-name" />
+              <svg class="form__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
-            <label for="modal-user-phone" class="modal-label">Телефон</label>
-            <div class="modal-wrapper">
-              <input class="modal-fild" id="modal-user-phone" type="tel" name="user-phone" />
-              <svg class="modal-icon" width="18" height="18">
+            <label for="modal-user-phone" class="form__label">Телефон</label>
+            <div class="form__wrapper">
+              <input class="form__fild" id="modal-user-phone" type="tel" name="user-phone" />
+              <svg class="form__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
-            <label for="modal-user-email" class="modal-label">Пошта</label>
-            <div class="modal-wrapper">
-              <input class="modal-fild" id="modal-user-email" type="email" name="user-email" />
-              <svg class="modal-icon" width="18" height="18">
+            <label for="modal-user-email" class="form__label">Пошта</label>
+            <div class="form__wrapper">
+              <input class="form__fild" id="modal-user-email" type="email" name="user-email" />
+              <svg class="form__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
-            <label id="modal-user-message" class="modal-label">Коментар</label>
-            <div class="modal-wrapper">
+            <label id="modal-user-message" class="form__label">Коментар</label>
+            <div class="form__wrapper">
               <textarea
-                class="modal-area"
+                class="form__area"
                 name="user-message"
                 rows="6"
                 placeholder="Введіть текст"
               ></textarea>
             </div>
-            <div class="form-agreement" role="group">
+            <div class="form__agreement" role="group">
               <input
-                class="modal-checkbox"
+                class="form__checkbox"
                 id="feedback-form-checkbox"
                 type="checkbox"
                 name="agreement-checkbox"
               />
               <label for="feedback-form-checkbox"
                 >Погоджуюся з розсилкою та приймаю
-                <a href="#" class="form-agreement-link">Умови договору</a></label
+                <a href="#" class="form__link">Умови договору</a></label
               >
             </div>
-            <button class="btn feedback-btn" type="submit">Відправити</button>
+            <button class="btn form__btn" type="submit">Відправити</button>
           </div>
         </form>
       </div>
